# code-challenge

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/: manage.py
src/confs/: __init__.py  urls.py  wsgi.py
src/confs/settings/: base.py  dev.py  production.py
src/core/templates/: base.html
src/stock/: admin.py  fetch_data.py  models.py  serializers.py  tests.py  utils.py  views.py
src/stock/management/commands/: fetch_daily_data.py
src/stock/migrations/: 0001_initial.py  0002_auto_20200701_1534.py  0002_auto_20200702_1652.py  0003_auto_20200701_1556.py  0003_auto_20200702_1653.py  0004_auto_20200701_1946.py  0005_recommendation_created_at.py  0006_auto_20200702_1048.py  0007_auto_20200702_1055.py  0008_remove_dailyprice_company.py  0009_dailyprice_company.py  0010_auto_20200702_1141.py  0011_auto_20200702_1143.py
